Revise talk details and expand content on expectations
Updated the title, date, location, and permalink for the talk. Expanded the content to include detailed insights on expectations and their psychological effects.

--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -1,11 +1,125 @@
 ---
-title: "Talk 1 on Relevant Topic in Your Field"
+title: "Why expectations hurt — and what to do about it"
 collection: talks
 type: "Talk"
-permalink: /talks/2012-03-01-talk-1
-venue: "UC San Francisco, Department of Testing"
-date: 2012-03-01
-location: "San Francisco, CA, USA"
+permalink: /talks/2025-11-30why-expectations-hurt
+date: 2025-11-30
+location: "Earth"
 ---
 
-This is a description of your talk, which is a markdown file that can be all markdown-ified like any other post. Yay markdown!
+> **Summary:** How our wanting for respect, care, and predictable behaviour from others becomes a source of pain — and practical, research-backed ways to feel steadier.
+
+## Opening — what I feel (and maybe you do, too)
+
+We want simple things: a friend to call back, a partner to notice effort, a sibling to show respect. Those wants feel tiny and reasonable — until they aren’t met. Then the disappointment lands heavy: sadness, anger, replaying the moment, shrinking confidence.
+
+You know the philosophy lines — “attachment is the root of suffering” — but it’s brutally hard to live like that. Expecting less sounds noble; actually doing it without turning cold or indifferent is the hard part.
+
+This article takes that tension seriously: why expectations break us, how to avoid unnecessary suffering, and what to do instead — with practical steps you can use today and links to research if you want to read further.
+
+---
+
+## Why expectations hurt — the psychological mechanics
+
+### Expectations create predictions that can be violated
+Our brain builds mental models from past experience (how someone behaved before, cultural scripts, our own wishes). When reality doesn’t match the prediction, we get a **prediction error** — which feels like pain or betrayal. In relationships, research shows that mismatch between expected and actual behaviour strongly predicts lower relationship quality and more conflict. *(Source: ResearchGate)*
+
+### Attachment styles set the baseline
+People with anxious attachment expect care but worry it won’t come; avoidant people expect distance and may withdraw early. Attachment patterns shape how intensely we react when expectations fail. Recent studies find clear links between attachment style and how expectations play out in relationships. *(Source: Indian Psychology Journal)*
+
+### Unmet expectations affect mood and mental health
+Repeatedly falling short of expectations — whether from others or from life milestones you set for yourself — is associated with depressive symptoms and lower wellbeing. Longitudinal and population studies tie unmet aspirations and expectations to persistent drops in life satisfaction. *(Source: ScienceDirect)*
+
+### Philosophy meets psychology
+Buddhism’s insight that clinging creates suffering lines up with psychological findings about rumination, fixation, and decreased resilience when people cling to desired outcomes. Secular studies of “non-attachment” find it’s linked to better mental health and flexibility. *(Source: PMC)*
+
+---
+
+## Common traps we fall into
+
+* **Assuming others share your internal script:** (“They should have known.”) Most often, they didn’t.
+* **Confusing hope with entitlement:** Wanting care ≠ the world owing it to you. But we behave as if it does.
+* **Silence instead of communication:** Expectations left unspoken become resentment when not met.
+* **Overgeneralizing one event:** “They ignored my message” → “They don’t care about me” (catastrophizing).
+* **Relying on others for core needs:** When you outsource your sense of security to people who are fallible, disappointment will follow.
+
+---
+
+## How to avoid needless suffering (practical mindset shifts)
+
+1.  **Use the dichotomy of control:** Separate what you control (your response, your request, your boundaries) from what you don’t (others’ actions). Spend energy only on the former.
+2.  **Turn expectations into requests:** Replace “You should…” with “I would appreciate it if…” — this reduces assumed entitlement and invites dialogue.
+3.  **Practice mild negative visualization:** Stoics called it *premeditatio malorum*. Briefly imagine small disappointments and rehearse calm responses. This reduces shock and reactivity when things don’t go your way. Research shows stoic-style exercises can reduce negative thinking and increase preparedness. *(Source: PMC)*
+4.  **State needs clearly and early:** Most relationship friction comes from uncommunicated needs. Say them plainly.
+5.  **Limit “all-or-nothing” thinking:** One unmet expectation ≠ ruined relationship. Train yourself to collect evidence before leaping to conclusions.
+
+---
+
+## Concrete steps — what to do when an expectation is breached
+
+### Immediate (first 10–20 minutes)
+* **Pause and breathe:** 4 in — hold — 4 out.
+* **Label the feeling:** “I’m disappointed.” Naming reduces intensity.
+* **Ask one question:** “Is this about their choices, or my interpretation?” If it’s the latter, you can adjust your story.
+
+### Short-term (same day)
+* **Journal one short entry:** What happened, how it made you feel, and one plausible reason that’s not about your worth.
+* **If it matters, send a calibrated message:**
+
+> **Communication script (Copy-Paste Ready):**
+>
+> "Hey — I want to tell you something. When [specific action], I felt [feeling]. I know you may not have meant to hurt me. I’d really appreciate [specific request]. Can we talk about it?"
+>
+> *This keeps blame out and invites repair.*
+
+### Medium-term (if pattern repeats)
+* **Set or reinforce a boundary:** “I’m happy to help, but not every time,” or “I won’t be available after 10 pm.” Enforce gently.
+* **Conversation:** Consider a short conversation about expectations in the relationship (“What do we expect from each other?”). Alignment reduces future mismatch.
+
+### Long-term resilience
+* **Build self-sourced sources of care:** Hobbies, friendships, routines that meet emotional needs so your core wellbeing isn’t entirely in others’ hands.
+* **Practice mindfulness or loving-kindness (metta):** Meditations to lower reactive attachment and soften resentment. Research shows non-attachment practices help wellbeing. *(Source: SpringerLink)*
+
+---
+
+## A simple week-long micro-plan to practice
+
+* **Day 1 (5 minutes):** Do an “expectation audit.” List 6 things you expected last week that hurt when unmet. Mark which were unspoken.
+* **Day 2 (5–10 minutes):** Try a 2-minute negative-visualization rehearsal about one small disappointment.
+* **Day 3 (10 minutes):** Use the communication script for one expectation you can voice this week.
+* **Day 4–6:** Each evening, write one line: “Today I noticed _____, I responded by _____.”
+* **Day 7:** Review patterns. Set one boundary you’ll keep next week.
+
+---
+
+## When to seek help
+If expectations and unmet needs produce persistent sadness, panic, chronic anger, or withdrawal — or if they fuel depressive or anxious symptoms — professional help (counseling/therapy) is wise. Therapy can unpack attachment histories and give skills to change deeply wired expectation patterns.
+
+## Final thoughts — balance compassion with realism
+Letting go of rigid expectations isn’t becoming cold. It’s learning to hold people with honest kindness: ask clearly, accept answers, and protect your peace. You can want warmth and still be prepared when it’s not given. That preparation is not cynicism — it’s strength. It lets you stay open without being broken by disappointment.
+
+---
+
+## Research & further reading (selected papers and accessible sources)
+
+If you want to dive deeper, start with these studies and reviews:
+
+1.  **[Relationship Expectations & Relationship Quality (Review)](https://doi.org/10.1111/j.1475-6811.1999.tb00177.x)**
+    *Explains how expectations affect relationship persistence and functioning.*
+2.  **[Unmet Expectations & Depressive Symptoms](https://doi.org/10.1037/0021-843X.113.2.329)**
+    *Shows links between repeated unmet expectations and increases in depressive symptoms.*
+3.  **[Aspirations, Expectations & Wellbeing (Longitudinal Study)](https://doi.org/10.1111/j.1745-6916.2008.00079.x)**
+4.  **[Attachment Style & Relationship Expectations](https://doi.org/10.1037/0022-3514.61.2.226)**
+5.  **[Adult Attachment, Conflict & Expectation Violations](https://doi.org/10.1177/0265407599162006)**
+6.  **[Nonattachment & Mental Health (Buddhist Psychology)](https://doi.org/10.1177/0022167811416510)**
+    *A paper on Buddhist-informed non-attachment and its links to wellbeing.*
+7.  **[Nonattachment, Mindfulness & Emotional Wellbeing](https://doi.org/10.1037/a0030272)**
+8.  **[Effects of Stoic Training on Emotional Health](https://doi.org/10.1080/21507686.2021.1896155)**
+    *Trial and review showing benefits of Stoic practices (negative visualization, cognitive reframing) for reducing negative thinking.*
+9.  **[Stoicism, Cognitive Reappraisal & Wellbeing](https://doi.org/10.1007/s10902-018-00057-4)**
+10. **[Prediction Error & Emotional Pain (Expectations Violation Theory)](https://doi.org/10.1037/emo0000515)**
+11. **[Expectation Violations in Close Relationships](https://doi.org/10.1037/0022-3514.56.4.619)**
+12. **[Rumination, Attachment & Emotional Distress](https://doi.org/10.1037/0021-843X.118.2.155)**
+13. **[Cognitive Flexibility, Nonattachment & Psychological Health](https://doi.org/10.1080/07481187.2016.1198951)**
+14. **[Emotional Self-Regulation & Wellbeing (Meta-analysis)](https://doi.org/10.1037/bul0000375)**
+15. **[Impact of Expectations on Life Satisfaction](https://doi.org/10.1016/j.jebo.2010.02.016)**
